# TradingAgents

FinWorld/: .gitattributes  .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
FinWorld/.github/workflows/: deploy.yml
FinWorld/configs/_asset_list_/: dj30.json  exp.json  full86k.json  hs300.json  nasdaq100.json  sp500.json  sse50.json
FinWorld/configs/agent/: finance_agent.py  general.py
FinWorld/configs/download/: full_symbol_info.py
FinWorld/configs/finreasoner/: data_process.py
FinWorld/configs/process/: dj30.py  exp.py  hs300.py  sp500.py  sse50.py
FinWorld/configs/time/: dj30_autoformer.py  dj30_crossformer.py  dj30_dlinear.py  dj30_etsformer.py
FinWorld/configs/vae/: transformer_vae.py
FinWorld/docs/: 404.html  api-reference.html  architecture.html  configuration.html  docs.css  documentation.html  examples.html  index.html  mathjax-config.js  script.js  style.css  tasks.html  tutorials.html  workflow.css
FinWorld/docs/assets/: tab_forecasting.tex  tab_trading.tex  table_forecasting_simple.html  table_platform_simple.html  table_portfolio.html  table_trading.html
FinWorld/docs/components/: load-components.js
FinWorld/examples/: download.sh  ppo_portfolio.sh  ppo_trading.sh  process.sh  sac_portfolio.sh  sac_trading.sh  time.sh
FinWorld/finworld/: registry.py
FinWorld/finworld/agent/: __init__.py
FinWorld/tests/: test_alpaca.py  test_config.py  test_crawler.py  test_datasets.py  test_factor.py  test_fmp.py  test_intervals.py  test_logger.py  test_models.py  test_time.py  test_web_fetcher.py
(+402 files in other folders)
